Fixed experience component overflow issue on 150% and 125% scalled displays

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -194,6 +194,18 @@ h1#aboutme-header {
   padding-top: 12rem;
 }
 
+@media (resolution: 144dpi) {
+  .experience {
+    padding-top: 3.5rem;
+  }
+}
+
+@media (resolution: 120dpi) {
+  .experience {
+    padding-top: 6rem;
+  }
+}
+
 h1#experience-header {
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
